<resources>
    <string name="app_name">Mobile_tp1_exo3</string>
    <string name="qst1">1.Le pattern MVC signifie :</string>
    <string name="qst2">2.La syntaxe $[x] est permise dans une JSP :</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="quiter">Quiter</string>
    <string name="suivant">Suivant</string>
    <string name="check1">Multiple Versions Combined</string>
    <string name="check2">Model View Controler</string>
    <string name="check3">Main Value Compiled</string>
    <string name="check4">Mondatory Validated Controls</string>
    <string name="trueResp">"La réponse correcte : "</string>
    <string name="resp">1.MVC : Model View Controller\n\n2.Non</string>
    <string name="label2">Votre Réponse</string>
    <string name="userRsp1">1.</string>
    <string name="userRsp2">2.</string>
</resources>