<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="477dp"
        android:layout_height="67dp"
        android:background="#5AB2BD"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_launcher_foreground"
        app:subtitleTextColor="#FFFFFF"
        app:title="E-Certificates"
        app:titleTextColor="#FDFDFD"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/qst1"
        android:layout_width="241dp"
        android:layout_height="27dp"
        android:paddingLeft="10dp"
        android:text="@string/qst1"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/qst2"
        android:layout_width="332dp"
        android:layout_height="18dp"
        android:paddingLeft="10dp"
        android:text="@string/qst2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="273dp"
            android:layout_height="37dp"
            android:text="@string/check1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.268"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.393"
            android:buttonTint="@drawable/checkbox_color_selector"
            />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="198dp"
            android:layout_height="45dp"
            android:text="@string/check2"
            android:buttonTint="@drawable/checkbox_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.178"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.469" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="198dp"
            android:layout_height="45dp"
            android:text="@string/check3"
            android:textColorHint="@drawable/checkbox_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.316"
            android:buttonTint="@drawable/checkbox_color_selector"
            />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="263dp"
            android:layout_height="37dp"
            android:text="@string/check4"
            android:textColorHighlight="#00BCD4"
            android:buttonTint="@drawable/checkbox_color_selector"
            android:textColorHint="#FFFFFF"
            />

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714"
        android:buttonTint="@drawable/radiobutton_color_selector"

        >

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oui"
            android:textColorHint="#00BCD4"
            android:textColorLink="#00BCD4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.661"/>

        <RadioButton
            android:id="@+id/no"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/non"
            android:buttonTint="@drawable/radiobutton_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.732" />


    </RadioGroup>

    <Button
        android:id="@+id/suivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AB2BD"
        android:text="@string/suivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.831"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/quiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#5AB2BD"
        android:text="@string/quiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.114"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="103dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124"
        app:srcCompat="@drawable/quiz" />


</androidx.constraintlayout.widget.ConstraintLayout>