<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"

    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="477dp"
        android:layout_height="67dp"
        android:background="#5AB2BD"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="10dp"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_launcher_foreground"
        app:subtitleTextColor="#FFFFFF"
        app:title="E-Certificates"
        app:titleTextColor="#FDFDFD"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234">

        <TextView
            android:id="@+id/label1"
            android:layout_width="274dp"
            android:layout_height="33dp"
            android:text="@string/trueResp"
            android:textColor="#4CAF50"
            android:textColorLink="#4CAF50"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.262"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.153" />

        <TextView
            android:id="@+id/resp"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginLeft="30dp"
            android:text="@string/resp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411">

        <TextView
            android:id="@+id/label2"
            android:layout_width="301dp"
            android:layout_height="36dp"
            android:text="@string/label2"
            android:textColor="#2196F3"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/userRsp1"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/userRsp1"
            android:paddingLeft="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.227"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44" />

        <TextView
            android:id="@+id/userRsp2"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:text="@string/userRsp2"
            android:paddingLeft="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.564" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>